--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,6 @@ server {
 
         location /api {
             proxy_pass http://app:3333/;
-            proxy_http_version 1.1;
+            #proxy_http_version 1.1;
         }
 }
