--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,10 @@ server {
 
         location /api {
             proxy_pass http://app:3333/;
-            #proxy_http_version 1.1;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
         }
 }
