--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,7 @@
   "description": "The fullstack application boilerplate for Adonisjs",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node -r esm server.js",
     "test": "node ace test"
   },
   "keywords": [
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "esm": "^3.2.25",
     "mysql": "^2.17.1"
   },
   "devDependencies": {},
