--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "adonis-acl": "^1.1.1",
     "esm": "^3.2.25",
     "mysql": "^2.17.1"
   },
