--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r esm server.js",
-    "test": "node ace test"
+    "test": "node ace test",
+    "nodemon": "nodemon server.js"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "test/*",
+      "docs/*"
+    ],
+    "delay": "2500"
   },
   "keywords": [
     "adonisjs",
@@ -26,10 +34,13 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "@adonisjs/validator": "^5.0.6",
     "esm": "^3.2.25",
     "mysql": "^2.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
   "autoload": {
     "App": "./app"
   }
